# docbot

./: .dockerignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  LICENSE  README.md  deployment.test.yaml  deploymenthook.example.yaml  deploymenthook.pod_template_by_name.example.yaml  deploymenthook.pod_template_by_spec.example.yaml  deploymenthooks.apps.mx.com.yaml  podtemplate.test.yaml
docbot-controller/: Cargo.toml  build.rs
docbot-controller/src/: cache.rs  job.rs  main.rs  utils.rs
docbot-crd/: Cargo.toml
docbot-crd/src/: lib.rs  pod_template.rs
src/: cache.rs  crd.rs  job.rs  main.rs
